# python-package

./: .gitignore  CHANGELOG.MD  LICENSE  README.MD  README.md  pybpsapi.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
pybpsapi/: __init__.py  main.py
src/: __init__.py  main.py  pybpsapi.py
