[project]
name = "pybpsapi"
version = "1.4.1"
description = "This package is a Python wrapper for the BPS Circular API. It supports all the five endpoints of the API, and also contains a good circular-checking system."
author = "Raj Dave"
author-email = "rajdave8002@gmail.com"
homepage = "https://bpsapi.rajtech.me/docs/"
license = "MIT"
keywords = ["bpsapi", "bps", "api", "wrapper", "python", "python3"]
requires-python = ">=3.10"
dependencies = ["requests"]
readme = "README.md"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
